[gd_scene load_steps=3 format=3 uid="uid://6p6e7hmqjkud"]

[ext_resource type="Script" path="res://ui/prompt/fromHandPrompt.gd" id="1_ktjlj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hj45o"]
bg_color = Color(0.458824, 0.67451, 0.231373, 1)

[node name="FromHandPrompt" type="Node2D"]
script = ExtResource("1_ktjlj")

[node name="Explanation" type="RichTextLabel" parent="."]
offset_left = 154.0
offset_top = 445.0
offset_right = 331.0
offset_bottom = 491.0
theme_override_styles/normal = SubResource("StyleBoxFlat_hj45o")
text = "asdasdsdasdasdasdasasdasdasdasdasd"
fit_content = true
scroll_active = false

[node name="ConfirmButton" type="Button" parent="."]
offset_left = 153.0
offset_top = 497.0
offset_right = 333.0
offset_bottom = 531.0
disabled = true
text = "Confirm"

[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
